@@ -1,3 +1,7 @@
+2004-11-07  Paolo Carlini  <pcarlini@suse.de>
+
+	* testsuite/performance/27_io/ifstream_getline-2.cc: New.
+
 2004-11-05  Benjamin Kosnik  <bkoz@redhat.com>
 
 	PR libstdc++/17218
